[package]
name = "aptosroom-standard-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json"] }
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "time"] }
dotenvy = "0.15"
